K8S/dp.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dev

-------------

apiVersion: v1
kind: ConfigMap 
metadata: 
  name: spring-Config
  namespace: dev
data:
  SPRING_PROFILES_ACTIVE: "dev"
  APP_NAME: "spring-pet-clinic"

-----------

apiVersion: v1
kind: Secret
metadata:
  name: spring-secret
  namespace: dev

type: Opaque

data:
  DB_USERNAME: cm9vdA==
  DB_PASSWORD: cGFzc3dvcmQ=

-------------


  
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-petclinic
  namespace: dev
  labels:
    app: spring-petclinic
spec:
  minReadySeconds: 5
  replicas: 3
  selector:
    matchLabels:
      app: spring-petclinic
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      name: my-pod
      labels:
        app: spring-petclinic
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
        prometheus.io/path: "/actuator/prometheus"
    spec:
      containers:
        - name: spring-petclinic
          image: ghcr.io/divyasri-zelar/spring-pet-clinic:1.1

          imagePullPolicy: Always

          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"

            limits:
              cpu: "500m"
              memory: "512Mi"

          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 15

          volumeMounts:
            - name: app-storage
              mountPath: /logs

      volumes:
        - name: app-storage
          persistentVolumeClaim:
            claimName: spring-pvc
