K8S/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-service
  namespace: dev
spec:
  selector:
    app: spring-petclinic
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 32000
