K8S/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spring-ingress
  namespace: dev

spec:
  ingressClassName: nginx

  rules:
  - host: petclinic.local

    http:
      paths:
      - path: /
        pathType: Prefix

        backend:
          service:
            name: spring-service
            port:
              number: 80
